[tool.poetry]
name = "hello_world"
version = "0.1.0"
description = "Just saying Hello!"
authors = ["Vinayak Mishra"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
